# rules_distroless

./: .bazelrc  README.md
.github/workflows/: ci.yaml
apt/: extensions.bzl
apt/private/: BUILD.bazel  deb_postfix.bzl  translate_dependency_set.bzl
apt/tests/: BUILD.bazel  deb_postfix_test.bzl
distroless/: BUILD.bazel  defs.bzl
distroless/private/: BUILD.bazel  flatten.sh  sysroot.bzl  sysroot_repo.bzl
distroless/tests/: asserts.bzl
e2e/smoke/: .bazelrc  MODULE.bazel
examples/: .bazelrc
examples/flatten/: BUILD.bazel
