load("@bazel_lib//:bzl_library.bzl", "bzl_library")
load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@rules_java//java:defs.bzl", "java_binary")
load("//distroless/tests:asserts.bzl", "assert_directory_listing")
load(":sysroot.bzl", "sysroot_from_tar")

exports_files([
    "cacerts.sh",
    "locale.sh",
    "flatten.sh",
])

java_binary(
    name = "keystore_binary",
    srcs = ["JavaKeyStore.java"],
    javacopts = [
        "-Xlint:-options",
    ],
    main_class = "JavaKeyStore",
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "cacerts",
    srcs = ["cacerts.bzl"],
    visibility = ["//distroless:__subpackages__"],
    deps = [":tar"],
)

bzl_library(
    name = "locale",
    srcs = ["locale.bzl"],
    visibility = ["//distroless:__subpackages__"],
    deps = [":tar"],
)

bzl_library(
    name = "group",
    srcs = ["group.bzl"],
    visibility = ["//distroless:__subpackages__"],
    deps = [
        "@bazel_lib//lib:expand_template",
        "@bazel_lib//lib:utils",
        "@bazel_skylib//rules:write_file",
        "@tar.bzl//tar:tar",
    ],
)

bzl_library(
    name = "os_release",
    srcs = ["os_release.bzl"],
    visibility = ["//distroless:__subpackages__"],
    deps = [
        "@bazel_lib//lib:expand_template",
        "@bazel_lib//lib:utils",
        "@bazel_skylib//rules:write_file",
        "@tar.bzl//tar:tar",
    ],
)

bzl_library(
    name = "passwd",
    srcs = ["passwd.bzl"],
    visibility = ["//distroless:__subpackages__"],
    deps = [
        ":util",
        "@bazel_lib//lib:expand_template",
        "@bazel_lib//lib:utils",
        "@bazel_skylib//rules:write_file",
        "@tar.bzl//tar:tar",
    ],
)

bzl_library(
    name = "java_keystore",
    srcs = ["java_keystore.bzl"],
    visibility = ["//distroless:__subpackages__"],
    deps = [":tar"],
)

bzl_library(
    name = "home",
    srcs = ["home.bzl"],
    visibility = ["//distroless:__subpackages__"],
    deps = [
        ":tar",
        ":util",
        "@tar.bzl//tar:tar",
    ],
)

bzl_library(
    name = "flatten",
    srcs = ["flatten.bzl"],
    visibility = ["//distroless:__subpackages__"],
    deps = [":tar"],
)

bzl_library(
    name = "sysroot_repo",
    srcs = ["sysroot_repo.bzl"],
    visibility = ["//distroless:__subpackages__"],
)

bzl_library(
    name = "sysroot",
    srcs = ["sysroot.bzl"],
    visibility = ["//distroless:__subpackages__"],
    deps = [":tar"],
)

bzl_library(
    name = "tar",
    srcs = ["tar.bzl"],
    visibility = [
        "//apt:__subpackages__",
        "//distroless:__subpackages__",
    ],
    deps = [
        "@bazel_skylib//lib:sets",
        "@tar.bzl//tar:tar",
    ],
)

bzl_library(
    name = "util",
    srcs = ["util.bzl"],
    visibility = ["//distroless:__subpackages__"],
)

write_file(
    name = "sysroot_from_tar_input_file",
    out = "sysroot_from_tar_input.txt",
    content = ["hello sysroot"],
    newline = "unix",
)

genrule(
    name = "sysroot_from_tar_input_tar",
    srcs = [":sysroot_from_tar_input_file"],
    outs = ["sysroot_from_tar_input.tar"],
    cmd = """
set -o errexit
mkdir -p $(@D)/sysroot_from_tar_input/etc
cp $(location :sysroot_from_tar_input_file) $(@D)/sysroot_from_tar_input/etc/hello.txt
$(BSDTAR_BIN) --create --file $@ -C $(@D)/sysroot_from_tar_input .
""",
    toolchains = ["@bsd_tar_toolchains//:resolved_toolchain"],
)

sysroot_from_tar(
    name = "sysroot_from_tar_directory",
    tar = ":sysroot_from_tar_input_tar",
)

assert_directory_listing(
    name = "sysroot_from_tar_test",
    actual = ":sysroot_from_tar_directory",
    expected = "/etc\n/etc/hello.txt\n",
)
